--- a/ChessOOP/ChessOOP.csproj
+++ b/ChessOOP/ChessOOP.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>images\chessicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="images\chessicon.ico" />
+  </ItemGroup>
 
 </Project>
