--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
+ChessOOP/obj/
+ChessOOP/bin/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
